cluster/admin/base/rancher/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rancher
  namespace: cattle-system
spec:
  hosts:
    - "rancher.$(hostname)"
  gateways:
    - public-gateway.istio-system.svc.cluster.local
  http:
    - route:
        - destination:
            host: rancher.cattle-system.svc.cluster.local
            port:
              number: 80
